--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Enhanced Text Recognition</h1>
+        <h1>Text Recognition</h1>
         <h4>Load and process image to extract text</h4>
         <img id="uploadedImage" alt="Uploaded Preview">
         <input type="file" id="imageInput" accept="image/*">
