--- a/index.html
+++ b/index.html
@@ -104,14 +104,16 @@
         }
 
         #output {
-            margin-top: 20px;
-            white-space: pre-wrap;
+            margin: 20px auto 0;
+            width: 95%;
+            height: 100px;
             background-color: #fff;
             color: #000;
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-            text-align: center;
+            display: none;
+            white-space: pre-wrap;
         }
 
         #paste-area {
@@ -137,7 +139,7 @@
             <button id="paste-button" style="color: black; background: white;">Paste Image</button>
         </div>
         <img id="uploadedImage" alt="Uploaded Preview">
-        <textarea id="output" style="display: none; width: 100%; height: 100px;"></textarea>
+        <textarea id="output"></textarea>
         <button id="processButton">Process Image</button>
     </div>
 
