--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
             display: none;
             white-space: pre-wrap;
+            resize: none; /* Prevent resizing */
         }
 
         #paste-area {
